syntax = "proto3";

package com.au.eventplanning.service;



option java_multiple_files = true;
option java_package = "com.au.eventplanning.grpc.generated.service";

service ListOccasionsService {
    rpc ListOccasions (ListOccasionsRequest) returns (ListOccasionsResponse);
}

message ListOccasionsRequest {
    string value = 1;
}

message ListOccasionsResponse {
    repeated string occasions=1;
}